# landing_platform

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: LandingPlatformParameters.cfg
docker/: Dockerfile  Dockerfile.sim  build_docker.sh  run_docker.sh  run_docker_sim.sh  start_docker.sh  start_docker_sim.sh
include/landing_platform/: landing_platform.h
launch/: ar_tag_detection.launch  environment.launch  landing_platform.launch  landing_platform_bagger.launch  tf_static_base_link_to_camera_link.launch  tf_static_map_to_camera_link.launch  world_to_base_link.launch
msg/: DetectedTags.msg
nodes/: LandingPlatformNode.cpp
rviz/: detection.rviz  detection_sim.rviz
scripts/: bagger.sh
src/: landing_platform.cpp  tf2_broadcaster.cpp
tmux_startup/: .tmuxinator.yml  session_ar_tag_detection.yml  session_rw_platform_landing.yml  session_sim_platform_landing.yml  start.sh
tmux_startup/custom_config/: mpc_tracker_config.yaml  mpc_tracker_config_rw.yaml
